--- a/designo-multi-page-website-bx61pchv3-elliotcase.vercel.app/src/Pages/locations.html
+++ b/designo-multi-page-website-bx61pchv3-elliotcase.vercel.app/src/Pages/locations.html
@@ -1,13 +1,13 @@
-<!DOCTYPE html>
+<<!DOCTYPE html>
 <html lang="en">
 
 <meta http-equiv="content-type" content="text/html;charset=utf-8" />
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="../styles/style.css">
   <link rel="icon" type="image/png" sizes="32x32" href="../../assets/favicon-32x32.png">
-  <title> Team B || Designo Agency Website Challenge</title>
+  <title>TeamB| Designo Agency Website Challenge</title>
 </head>
 
 <body>
@@ -193,6 +193,7 @@
   <script src="../scripts/script.js"></script>
 
 </body>
+
 
 
 </html>
